# solid-python

./: .gitignore  Makefile  README.md  pyproject.toml
solid/: single_responsibility.py
